storageclass nutanix-volume no longer exists

--- a/k8s/database-claim0-persistentvolumeclaim.yaml
+++ b/k8s/database-claim0-persistentvolumeclaim.yaml
@@ -6,7 +6,7 @@ metadata:
   name: database-claim1
   namespace: newsgac
 spec:
-  storageClassName: nutanix-volume
+  storageClassName: longhorn
   accessModes:
   - ReadWriteOnce
   resources:
